--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <!-- Sección del Header/Title/Hero -->
     <section class="titulo" id="sobre-mi">
         <div class="titulo__div">
-            <img class="titulo__perfil" src="assets/Imagen/Perfil/perfil.png" alt="Descripción de la imagen">
+            <img class="titulo__perfil" src="" alt="Descripción de la imagen">
 
 
             <div class="titulo__contenedor">
